--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
+          <li class="nav-item-blog">
+            <a class="blog-referral" href="https://blog.jeddevs.me/">Blog</a>
+          </li>
         </ul>
       </div>
     </nav>
