--- a/index.html
+++ b/index.html
@@ -84,8 +84,11 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
-          <li class="nav-item-blog">
+          <li class="nav-item">
             <a class="blog-referral" href="https://blog.jeddevs.me/">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="artstation-referral" href="https://www.artstation.com/jeddevs">Blog</a>
           </li>
         </ul>
       </div>
