--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="blog-referral" href="https://blog.jeddevs.me/">Blog</a>
+            <a class="nav-link js-scroll-trigger" href="https://blog.jeddevs.me/">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="artstation-referral" href="https://www.artstation.com/jeddevs">Blog</a>
+            <a class="nav-link js-scroll-trigger" href="https://www.artstation.com/jeddevs">Art Station</a>
           </li>
         </ul>
       </div>
