Link Tree Added, art station removed (nav-item)

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <a class="nav-link js-scroll-trigger" href="https://blog.jeddevs.me/">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://www.artstation.com/jeddevs">Art Station</a>
+            <a class="nav-link" href="https://linktr.ee/JedDevs">Link Tree</a>
           </li>
         </ul>
       </div>
